--- a/_config.yml
+++ b/_config.yml
@@ -73,9 +73,9 @@ author:
 social-network-links:
   rss: true
   email: "juwn.kim@gmail.com"
-  facebook: daattali
-  github: daattali
-  twitter: daattali
+ # facebook: daattali
+  github: juwn-kim
+#  twitter: 
 #  reddit: yourname
 #  google-plus: +DeanAttali
 #  linkedin: daattali
